# fake-cf-api

./: .gitignore  29bae8a03647eb9b55a10b5f2203b23d2b970081-index.wasm  Cargo.toml  Dockerfile  README.md  shim.js  uploaded_file_index.js
.github/workflows/: build-alpine.yml  build-container.yml  build-macos.yml  build-ubuntu.yml  build-windows.yml  code-check.yml  release-build.yml  rust.yml
kubernetes/: fake-cf-api.yaml
src/: args.rs  fs.rs  main.rs  put_services.rs  upload.rs
src/defaultResponses/: put_secrets.json
src/kube/: mod.rs
src/kube/WorkerAccount/: mod.rs
src/kube/WorkerVersion/: mod.rs
src/kube_crd/: client.rs  mod.rs
src/kube_crd/worker_account/: mod.rs
src/kube_crd/worker_version/: mod.rs
src/put/: mod.rs  save_file_route.rs
src/routes/: kube.rs  mod.rs
src/routes/defaultResponses/: get_memberships.json
src/routes/delete/: delete_secrets_route.rs  mod.rs
src/routes/get/: get_secrets_list_route.rs  get_services.rs  mod.rs
src/routes/post/: mod.rs  post_services.rs
src/routes/put/: mod.rs  put_secret_route.rs  save_file_route.rs  upload.rs
