[package]
name = "rust-fake-cf-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-multipart = "0.6.0"
actix-web = "4.3.1"
dotenv = "0.15.0"
futures = "0.3.28"
k8s-openapi = { version = "0.18.0", features = ["v1_26"] }
kube = "0.83.0"
regex = "1.8.4"
rusoto_core = "0.48.0"
rusoto_s3 = "0.48.0"
serde = "1.0.164"
serde_json = "1.0.97"
tokio = "1.28.2"
tokio-util = "0.7.8"

[package.metadata]
watch = ["cargo", "watch", "-x", "run"]
